Replace iframes with XMLHttpRequest
Looks like Mobile Safari stopped allowing access between frames in different domains, so the old
technique wasn't working.  I imagine this breaks commands going back from the browser to the iPhone,
but I don't have any need for that yet.

--- a/firebug.html
+++ b/firebug.html
@@ -23,6 +23,6 @@
         </div>
     </div>
     
-    <script src="firebug.js"></scripot>
+    <script type="text/javascript" src="firebug.js"></script>
 </body>
 </html>
